tests/snapshots/cli__merge_two_files.snap
---
source: tests/cli.rs
expression: cached_toml
---
format = "$all"

[character]
error_symbol = "[>](bold red)"
success_symbol = "[→](bold cyan)"

[package]
disabled = true
