tests/snapshots/cli__multiple_presets.snap
---
source: tests/cli.rs
expression: cached_toml
---
format = "$all"

[character]
error_symbol = "[→](bold red)"
success_symbol = "[❯](bold green)"

[git_branch]
symbol = " "
