tests/snapshots/cli__preset_only.snap
---
source: tests/cli.rs
expression: cached_toml
---

format = "$all"

[character]
success_symbol = "[→](bold cyan)"
