tests/snapshots/cli__preset_with_user_config.snap
---
source: tests/cli.rs
expression: cached_toml
---
format = "$all"

[character]
error_symbol = "[→](bold red)"
success_symbol = "[>](bold green)"

[git_branch]
format = "[$branch]($style) "

[package]
disabled = true
